configure and use material-design-icons module

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @charset 'UTF-8';
 
+@import 'material-icons';
 @import 'materialize-settings';
 @import '~materialize-css/sass/materialize';
 @import 'style';
